--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,14 +7,11 @@
   
   <div class="collapse navbar-collapse justify-content-end " id="navbarSupportedContent">
     <ul class="navbar-nav d-flex mt-2 mt-lg-0">
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="/">Products <span class="sr-only">(current)</span></a>
+      <li class="nav-item" >
+        <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Products </a>
       </li>
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="checkout">Checkout</a>
-      </li>
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="add-product">Add Product</a>
+      <li class="nav-item" >
+        <a class="nav-link" routerLink="add-product" routerLinkActive="active">Add Product</a>
       </li>
     </ul>
   </div>
