--- a/src/app/add-product/add-product.component.html
+++ b/src/app/add-product/add-product.component.html
@@ -5,11 +5,11 @@
     </div>
     <div class="form-group">
         <label for="exampleInputEmail1" >Image Url</label>
-        <input type="text" class="form-control" formControlName="image_url">
+        <input type="text" class="form-control" formControlName="imageUrl">
       </div>
     <div class="form-group">
       <label for="exampleInputPassword1" >Description</label>
-      <textarea class="form-control" name='description' cols="30" rows="10" formControlName="desc"></textarea>
+      <textarea class="form-control" name='description' cols="30" rows="10" formControlName="description"></textarea>
     </div>
     
     <button type="button" class="btn btn-primary" (click)="onSubmit()" [disabled]="!productDetails.valid">Submit</button>
